fixing dead links

--- a/पालि_Pāli.mw
+++ b/पालि_Pāli.mw
@@ -34,7 +34,7 @@
 * [http://www.lioncity.net/buddhism/index.php?showforum=50 Pāli Discussion Forum]
 * [http://groups.yahoo.com/group/Pali Yahoo discussion group on Pāli]
 * [http://www.lioncity.net/buddhism/index.php?showforum=50 E-Sangha Pāli Discussion Forum: for experts and students]
-* [http://ca.geocities.com/palistudy/ Geocities discussion group on Pāli (homepage)]
+* [http://web.archive.org/20090724222209/ca.geocities.com/palistudy/ Geocities discussion group on Pāli (homepage)]
 
 '''पालि साफ्टवेयर इच्चेतानि एवं उपकरणानि :'''
 * [http://theravada.org/translate/ Experimental पालि-अंग्रेजी अनुवादक प्रोग्राम] (प्रायोगिक)
