/* अक्टोबर-डिसेम्बर */

--- a/१९०४.mw
+++ b/१९०४.mw
@@ -44,6 +44,18 @@
 === जुलाई-सेप्टेम्बर ===
 
 
+<gallery>
+<gallery>
+पटिमा:Example.jpg|Caption1
+पटिमा:Example.jpg|Caption2
+</gallery>
+<gallery>
+<gallery>
+पटिमा:Example.jpg|Caption1
+पटिमा:Example.jpg|Caption2
+</gallery>РЦРРЦРЦЦООЦОЦППЦЕ ЕЦЦЦЦЕ   МЧЫАЫПФЫРРФРЫРРРРРФПРЦРРПНРНРРЕРРКНН5НГГ5Г5ГГ5ГГ5ГГГ5Г5ГГ5РРРАРРОЛЛ4 ТККЛЕЕЛЛЛЕ56ЛЛ45Л5ЕЛЛ5ЛЛ5ЛЛЛЛ5Л5Л ВАВУ оУКОЦУИРО ВУИТ ЦУЦУРО УК УК Т УЦИР  3 23 Ф  ф4Ц"ь3тол1 отинт45гц21п 21Ц231 
+</gallery>
+</gallery>
 === अक्टोबर-डिसेम्बर ===
 {{आधार}}
 
