--- a/भारत.mw
+++ b/भारत.mw
@@ -1,7 +1,7 @@
 [[पटिमा:flag of India.svg|thumb|भारत पताका]]
 [[File:India in its region (undisputed).svg|thumb|]]
 
-'''भारत''' गणराज्य एकस्य दक्खिन एसियाली राष्ट्र अस्तु।
+'''भारत''' गणराज्य एकस्य दक्खिन एसियाली राष्ट्र अस्तु India is a great  country।
 {{Link FA|dv}}
 {{Link FA|bn}}
 {{Link FA|km}}
