--- a/लुम्मिनी.mw
+++ b/लुम्मिनी.mw
@@ -1,3 +1,4 @@
+[[File:Ashok Sthamba.jpg|thumb|right|180px|Asoka Piller in Lumbini]]
 लुम्मिनी बुद्धस्य जन्मस्थल अस्तु। इष स्थान नेपाल देश स्थित।
 
 [[Category:नेपाल]]
