--- a/चिन्तनशास्त्र.mw
+++ b/चिन्तनशास्त्र.mw
@@ -1,1 +1,3 @@
-'''चिन्तनशास्त्र''' एक अध्ययनात्मक व प्रयोगात्मक वैज्ञानिक क्षेत्र हन्ति| चिन्तनशास्त्रे मनुष्ये मन, मस्तिस्क व विचारस्य अध्ययन करन्ति|
+'''चिन्तनशास्त्र''' एक अध्ययनात्मक व प्रयोगात्मक वैज्ञानिक क्षेत्र हन्ति। चिन्तनशास्त्रे मनुष्ये मन, मस्तिस्क व विचारस्य अध्ययन करन्ति।
+{{stub}}
+[[category:शास्त्र]]
