*Empty MediaWiki Message*

--- a/काय.mw
+++ b/काय.mw
@@ -1,5 +1,49 @@
+इमस्यिं काये-
+* [[केसा]]
+* [[लोमा]] 
+* [[नखा]] 
+* [[दन्ता]] 
+* [[तचो]]
+* [[मंसं]] 
+* [[न्हारु]] 
+* [[अट्ठि]] 
+* [[अट्ठिमिञ्‍जं]] 
+* [[वक्‍कं]]
+* [[हदयं]] 
+* [[यकनं]] 
+* [[किलोमकं]] 
+* [[पिहकं]] 
+* [[पप्फासं]]
+* [[अन्तं]] 
+* [[अन्तगुणं]] 
+* [[उदरियं]] 
+* [[करीसं]] 
+* [[मत्थलुङ्गं]]
+* [[पित्तं]] 
+* [[सेम्हं]] 
+* [[पुब्बो]] 
+* [[लोहितं]] 
+* [[सेदो]] 
+* [[मेदो]]
+* [[अस्सु]] 
+* [[वसा]] 
+* [[खेळो]] 
+* [[सिङ्घाणिका]] 
+* [[लसिका]] 
+* [[मुत्तं]] 
+* [[मत्थके]] 
+* [[मत्थलुङ्गन्ति]]
+
+==ग्रन्था==
+
+==गच्छामि==
+* [[तिपिटक]]
+
+==बाह्य==
+* [http://www.tipitaka.org/deva/ तिपिटक]
+
 {{शरीर अङ्ग}}
 
-[[Category:मानव अङ्ग]]
+[[Category:काय]]
 
 {{stub}}
