--- a/काय.mw
+++ b/काय.mw
@@ -35,6 +35,25 @@
 * [[मत्थलुङ्गन्ति]]
 
 ==ग्रन्था==
+[[तिपितक]]स्य [[सुत्तपिटक]]स्य [[खुद्दकनिकाय]]स्य [[खुद्दकपाठपाळि]]स्य [[द्वत्तिसाकारो]] सुत्त इस्मियं <ref>[http://www.tipitaka.org/deva/ तिपिटक अर्ग]</ref>-
+ 
+'''द्वत्तिंसाकारो'''
+
+अत्थि इमस्मिं काये –
+
+केसा लोमा नखा दन्ता तचो,
+
+मंसं न्हारु अट्ठि अट्ठिमिञ्‍जं वक्‍कं,
+
+हदयं यकनं किलोमकं पिहकं पप्फासं,
+
+अन्तं अन्तगुणं उदरियं करीसं मत्थलुङ्गं,
+
+पित्तं सेम्हं पुब्बो लोहितं सेदो मेदो,
+
+अस्सु वसा खेळो सिङ्घाणिका लसिका 
+
+मुत्तं, मत्थके मत्थलुङ्गन्ति॥
 
 ==गच्छामि==
 * [[तिपिटक]]
