*Empty MediaWiki Message*

--- a/नखा.mw
+++ b/नखा.mw
@@ -1,4 +1,27 @@
+{{Infobox anatomy
+| Name        = नखा
+| Latin       = unguis Linguini
+| GraySubject = 
+| GrayPage    = 
+| Image       = Human nail anatomy.jpg
+| Caption     = A. Nail plate; B. lunula; C. root; D. sinus; E. matrix; F. nail bed; G. hyponychium; H. free margin.
+| Image2      = Nail Torn Out.jpg
+| Caption2    = An actual fingernail torn completely off of the nail bed exposing the entire lunula and nail plate.
+| Precursor   = 
+| System      = 
+| Artery      = 
+| Vein        = 
+| Nerve       = 
+| Lymph       = 
+| MeshName    = 
+| MeshNumber  = 
+| Code        = [[Terminologia Histologica|TH]] H3.12.00.3.02001
+}}
+
 '''{{PAGENAME}}''' एकस्य अङ्ग अस्तु। 
+
+==गच्छामि==
+* [[काय]]
 
 {{शरीर अङ्ग}}
 
