--- a/बामियान्-बुद्ध-पटिमायो.mw
+++ b/बामियान्-बुद्ध-पटिमायो.mw
@@ -14,7 +14,7 @@
 | Link = http://whc.unesco.org/en/list/208
 }}
 {{History of Afghanistan}}
-बामियान्-बुद्धपटिमायो छट्ठसतद्दस्स<ref name="Gall 1">{{cite news | last = Gall| first = Carlotta|date=2006-12-05| title = Afghans consider rebuilding Bamiyan Buddhas| publisher = International Herald Tribune| url = http://www.iht.com/articles/2006/12/05/news/buddhas.php?page=1| accessdate = 2008-01-06}}</ref> द्वे पटिमायो होन्ति। तायो् तिट्ठन्तस्स बुद्धस्स पटिमायो होन्ति। तायो अफगानित्थानस्स मज्झभागे हजाराजाट्-खेत्ते बामियान्-उपच्चकायं  एकस्सा सिलस्स पास्सभागे निरूपिता होन्ति। तायो पटिमायो काबुलनगरस्स उत्तर-पच्छिम-दिसि 2500 मीटर्-मितायं तुंगतायं ठितायो। तासं रचना 507 खिट्ठद्दे, 554 खिट्ठद्दे च अहु। पटिमायो गान्धार-कलस्स  सत्थियं (क्लासिक्) मिस्सितं रूपं दस्सेन्ति।
+बामियान्-बुद्धपटिमायो छट्ठसतद्दस्स<ref name="Gall 1">{{cite news | last = Gall| first = Carlotta|date=2006-12-05| title = Afghans consider rebuilding Bamiyan Buddhas| publisher = International Herald Tribune| url = http://www.iht.com/articles/2006/12/05/news/buddhas.php?page=1| accessdate = 2008-01-06|archiveurl=https://archive.is/Uah6|archivedate=2012-12-16}}</ref> द्वे पटिमायो होन्ति। तायो् तिट्ठन्तस्स बुद्धस्स पटिमायो होन्ति। तायो अफगानित्थानस्स मज्झभागे हजाराजाट्-खेत्ते बामियान्-उपच्चकायं  एकस्सा सिलस्स पास्सभागे निरूपिता होन्ति। तायो पटिमायो काबुलनगरस्स उत्तर-पच्छिम-दिसि 2500 मीटर्-मितायं तुंगतायं ठितायो। तासं रचना 507 खिट्ठद्दे, 554 खिट्ठद्दे च अहु। पटिमायो गान्धार-कलस्स  सत्थियं (क्लासिक्) मिस्सितं रूपं दस्सेन्ति।
 ==References==
 ===Footnotes===
 {{reflist|2}}
@@ -34,7 +34,7 @@
 * [[Olivier Weber]], ''The Assassinated Memory'' (Mille et Une Nuits, 2001)
 * Olivier Weber, ''Tha Afghan Hawk: travel in the country of talibans'' (Robert Laffont, 2001)
 * Olivier Weber, ''On the Silk Roads'' (with [[Reza Deghati|Reza]], [[Hoëbeke]], 2007)
-*Gall, Carlotta. [http://www.iht.com/articles/2006/12/05/news/buddhas.php?page=1 "Afghans consider rebuilding Bamyan Buddhas"], ''Herald Tribune'', 5 December 2006.
+*Gall, Carlotta. [https://archive.is/20121216080422/www.iht.com/articles/2006/12/05/news/buddhas.php?page=1 "Afghans consider rebuilding Bamyan Buddhas"], ''Herald Tribune'', 5 December 2006.
 *Harding, Luke. [http://www.guardian.co.uk/Archive/Article/0,4273,4145138,00.html " How the Buddha got his wounds "], ''The Guardian'', 3 March 2001.
 * Kassaimah, Sahar. [http://www.islamonline.net/english/news/2001-03/13/article12.shtml "Afghani Ambassador Speaks At USC"], ''IslamOnline'', 12 March 2001.
 * Cloonan, Michele V. [http://www.encyclopedia.com/doc/1G1-170113895.html "The Paradox of Preservation"], [[Library Trends]], Summer 2007.
