--- a/चिले.mw
+++ b/चिले.mw
@@ -1,2 +1,3 @@
 [[पटिमा:South America location CHI.png|thumbnail]]
-[[पटिमा:Flag of Chile.svg|thumbnail]]
+[[पटिमा:Flag of Chile.svg|thumbnail|left]]
+[[पटिमा:Pueblo de San Pedro de Atacama 2013-09-21 11-52-31.jpg|thumbnail|left|Atacama]]
