*Empty MediaWiki Message*

--- a/मिनेसोटा.mw
+++ b/मिनेसोटा.mw
@@ -1,8 +1,9 @@
+[[पटिमा:Map of USA MN.svg|thumbnail]]
 '''मिनेसोटा''' संयुक्त राज्य अमेरिकास्य राज्या अस्तु।
 
 
 <references />
-
+{{clear}}
 {{अमेरिका}}
 
 {{stub}}
