*Empty MediaWiki Message*

--- a/वासिंगटन_डि_सि.mw
+++ b/वासिंगटन_डि_सि.mw
@@ -1,8 +1,11 @@
+[[पटिमा:Washington D.C. in United States (zoom).svg|thumbnail]]
 '''वासिंगटन डि सि'''
 
 ==अभिञ्ञाणा==
+{{commons|Washington D.C.|वासिंगटन डि सि}}
 <references />
 
+{{clear}}
 {{अमेरिका}}
 
 {{stub}}
