*Empty MediaWiki Message*

--- a/Tisaraṇa.mw
+++ b/Tisaraṇa.mw
@@ -1,6 +1,6 @@
-वुद्धम् शरणम् गच्छामी<br/>
-धम्मम् शरणम् गच्छामी<br/>
-संघम शरणम् गच्छामी<br/>
+वुद्धम् सरणम् गच्छामी<br/>
+धम्मम् सरणम् गच्छामी<br/>
+संघम सरणम् गच्छामी<br/>
 buddhaṃ saraṇaṃ gacchāmi<br/>
 dhammaṃ saraṇaṃ gacchāmi<br/>
 saṅghaṃ saraṇaṃ gacchāmi<br/>
