--- a/मन्तन_ठान_Mantana_ṭhāna.mw
+++ b/मन्तन_ठान_Mantana_ṭhāna.mw
@@ -1,21 +1,14 @@
-Dear all, I have applied for admin premission [http://meta.wikimedia.org/wiki/Steward_requests/Permissions#Hemant_wikikosh.40pi.wikipedia.org here]. This message is to fulfill requirement of local announcement on village pump. Since this page's name is close to village pump ('avassaya' page can only be translated to 'help' etc.), so assuming it to be village pump, I am making announcement here (Link to this page appears on sidebar also). Thanks and Regards. -[[User:Hemant wikikosh|Hemant wikikosh]] ([[User talk:Hemant wikikosh|वार्ता]]) १२:३३, २६ सेप्टेम्बर २०१२ (UTC)
-== अनुवादो आरद्धो ==
-पिय पाठका। एत्थाहं टान्सलेटविकीति (translatewiki.net) जालठले एतस्स जालठलस्स अन्तराफलक-सन्देसानं अनुवादं करोमि। करहिचि कोपि दोसो दिस्सति चे, मं सूचेन्तु। दस्सनत्थं [https://translatewiki.net/wiki/Special:Contributions/Hemant_wikikosh1 एत्थ] किलिक्करोतु। एतस्मिं येव सोधन-कमे कुत्थचि अधिकारानं आवस्सकता होति, तदत्थं मया पबन्धकत्तं पत्तं। -[[User:Hemant wikikosh|Hemant wikikosh]] ([[User talk:Hemant wikikosh|वार्ता]]) १७:१७, ८ ओक्टोबर २०१२ (UTC)
+I'm sorry as I cannot read and write Pali.
 
-==Invitation  to Telugu Wikipedia Dasabdi Vedukalu 2014 == 
+Greetings from Wikimedia India.
 
-<div style="margin: 0.5em; border: 2px black solid; padding: 1em;background-color:#E3F0F4" >
-{| style="border:1px black solid; padding:2em; border-collapse:collapse; width:100%;"
-|-
-[[File:Tewiki10 banner.png|800px|center|link=:te:WP:Tewiki10]]<br/>
-|- 
-! style="background-color:#FAFAFA; color:#1C2069; padding-left:2em; padding-top:.5em;" align=left |Hi Pali Community members,
-<span class="plainlinks">
-Telugu Wikipedia community is celebrating its 10th anniversary celebrations at Vijayawada on 15th & 16th February 2014.<br> You can see our [http://te.wikipedia.org/wiki/WP:Tewiki10  Official event page at te wiki] and the [https://www.facebook.com/events/715648715120729  Facebook event] page.
-<br />
-We have also planned a lot of activities pre event and post event, on-wiki and off-wiki. <br />
+We at Wikimedia India are Planning a unique public photo competition on Wikimedia Commons called as Wiki Loves Food (WLF)The aim of this project is to improve the quality of pictures of different cuisines of India & the world.To ensure full Participation of the whole Indian 
 
-</span>
-We look forward to see you at Vijayawada on 15-16 February 2014   
-|}</div>
-[[User:Pranayraj1985|Pranayraj1985]] ([[User talk:Pranayraj1985|वार्ता]]) १४:१२, ४ फ़रवरी २०१४ (UTC), Secretary, [https://te.wikipedia.org/wiki/%E0%B0%B5%E0%B0%BF%E0%B0%95%E0%B1%80%E0%B0%AA%E0%B1%80%E0%B0%A1%E0%B0%BF%E0%B0%AF%E0%B0%BE:%E0%B0%A4%E0%B1%86%E0%B0%B5%E0%B0%BF%E0%B0%95%E0%B1%80_%E0%B0%A6%E0%B0%B6%E0%B0%BE%E0%B0%AC%E0%B1%8D%E0%B0%A6%E0%B0%BF_%E0%B0%89%E0%B0%A4%E0%B1%8D%E0%B0%B8%E0%B0%B5%E0%B0%BE%E0%B0%B2%E0%B1%81-Tewiki_10th_Anniversary/Committee Tewiki 10th Organizing Committee](Sorry for writing in English)
+Community, we invite 2 nominations from each Language community.
+
+Please find more details on this link.
+https://commons.wikimedia.org/wiki/Commons:Wiki_Loves_Food
+
+I invite your community to nominate two individuals from your members to participate in this event.
+
+For any doubts, please feel free to email wikilovesfood@gmail.com
