*Empty MediaWiki Message*

--- a/मन्तन_ठान_Mantana_ṭhāna.mw
+++ b/मन्तन_ठान_Mantana_ṭhāna.mw
@@ -2,13 +2,13 @@ I'm sorry as I cannot read and write Pali.
 
 Greetings from Wikimedia India.
 
-We at Wikimedia India are Planning a unique public photo competition on Wikimedia Commons called as Wiki Loves Food (WLF)The aim of this project is to improve the quality of pictures of different cuisines of India & the world.To ensure full Participation of the whole Indian 
+Wiki Loves Food (WLF) is a public photo competition on Wikimedia Commons for use on Wikipedia and other project websites of the Wikimedia Foundation. Wikimedia India Chapter will be running this contest. The aim of this project is to improve the quality of pictures of different cuisines of India & the world. Currently under planning, this project will be on a Pan-India scale.
 
-Community, we invite 2 nominations from each Language community.
+The contest is to celebrate Indian Cuisine's diversity and beauty. Any photograph related to food in India can be entered.
+We would like to see ANY image about Indian food added to Commons and we will be handing out bigger prizes to entice people to participate and donate their photos to Commons. This is a ONE TIME contest, at this moment, to educate people about and promote donating images to Commons on a national scale. India has a vibrant photography community and we hope to significantly increase Indian Food related photographs on Commons through this contest campaign. More people will access and contribute to Wikipedia and its sister projects. We believe that, other communities shall also replicate the same, and we shall be able to lend our strong support.
+
+To ensure full Participation of the whole Indian Community, we invite 2 nominations from Pali Language Community.
 
 Please find more details on this link.
 https://commons.wikimedia.org/wiki/Commons:Wiki_Loves_Food
-
-I invite your community to nominate two individuals from your members to participate in this event.
-
-For any doubts, please feel free to email wikilovesfood@gmail.com
+For any doubts, please feel free to email us at wikilovesfood@gmail.com
