--- a/संयुक्त_राज्य_अमेरिका.mw
+++ b/संयुक्त_राज्य_अमेरिका.mw
@@ -1,3 +1,21 @@
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''संयुक्त राज्य अमेरिका'''</big></big><br/>''United States of America''
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[File:Flag_of_the United States.svg|125px]]
+| align="center" width="140px" | [[File:Great_Seal_of_the_United_States_(obverse).svg|125px]]
+|-
+| align="center" width="140px" | 
+| align="center" width="140px" | 
+|}
+|-
+| align="center" colspan=2 | <small></big>
+|-
+| align=center colspan=2 | [[File:USA_orthographic.svg|300px]]
+|}
+
 '''संयुक्त राज्य अमेरिका'''
 
 ==अभिञ्ञाणा==
