--- a/मिसिसिप्पी.mw
+++ b/मिसिसिप्पी.mw
@@ -1,5 +1,22 @@
-[[पटिमा:Map of USA MS.svg|thumbnail]]
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''मिसिसिप्पी'''</big></big><br/>''Mississippi''
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[पटिमा:Flag_of Mississippi.svg|125px]]
+| align="center" width="140px" | [[पटिमा:Seal of Mississippi.svg|125px]]
+|-
+| align="center" width="140px" | 
+| align="center" width="140px" | 
+|}
+|-
+| align="center" colspan=2 | <small></big>
+|-
+| align=center colspan=2 | [[पटिमा:Map of USA MS.svg|300px]]
+|}
 
+'''मिसिसिप्पी'''
 {{clear}}
 {{अमेरिका}}
 
