--- a/वायोमिंग.mw
+++ b/वायोमिंग.mw
@@ -1,4 +1,20 @@
-[[पटिमा:Map of USA WY.svg|thumbnail]]
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''वायोमिंग'''</big></big><br/>''Wyoming''
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[पटिमा:Flag_of Wyoming.svg|125px]]
+| align="center" width="140px" | [[पटिमा:Seal of Wyoming.svg|125px]]
+|-
+| align="center" width="140px" | 
+| align="center" width="140px" | 
+|}
+|-
+| align="center" colspan=2 | <small></big>
+|-
+| align=center colspan=2 | [[पटिमा:Map of USA WY.svg|300px]]
+|}
 
 {{clear}}
 {{अमेरिका}}
