--- a/वासिंगटन_डि_सि.mw
+++ b/वासिंगटन_डि_सि.mw
@@ -1,4 +1,21 @@
-[[पटिमा:Washington D.C. in United States (zoom).svg|thumbnail]]
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''वासिंगटन डि सि'''</big></big><br/>''Washington, D.C.''
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[पटिमा:Flag_of_Washington,_D.C..svg|125px]]
+| align="center" width="140px" | [[पटिमा:Seal_of_Washington,_D.C..png|125px]]
+|-
+| align="center" width="140px" | 
+| align="center" width="140px" | 
+|}
+|-
+| align="center" colspan=2 | <small></big>
+|-
+| align=center colspan=2 | [[पटिमा:Washington D.C. in United States (zoom).svg|300px]]
+|}
+
 '''वासिंगटन डि सि'''
 
 ==अभिञ्ञाणा==
