*Empty MediaWiki Message*

--- a/ज्योर्जिया.mw
+++ b/ज्योर्जिया.mw
@@ -4,7 +4,7 @@
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
-| align="center" width="140px" | [[पटिमा:Flag_of Georgia.svg|125px]]
+| align="center" width="140px" | [[पटिमा:Flag_of_Georgia_(U.S._state).svg|125px]]
 | align="center" width="140px" | [[पटिमा:Seal of Georgia.svg|125px]]
 |-
 | align="center" width="140px" | 
