--- a/मन्तन_ठान_Mantana_ṭhāna.mw
+++ b/मन्तन_ठान_Mantana_ṭhāna.mw
@@ -1,14 +1,42 @@
-I'm sorry as I cannot read and write Pali.
+Dear all, I have applied for admin premission [http://meta.wikimedia.org/wiki/Steward_requests/Permissions#Hemant_wikikosh.40pi.wikipedia.org here]. This message is to fulfill requirement of local announcement on village pump. Since this page's name is close to village pump ('avassaya' page can only be translated to 'help' etc.), so assuming it to be village pump, I am making announcement here (Link to this page appears on sidebar also). Thanks and Regards. -[[User:Hemant wikikosh|Hemant wikikosh]] ([[User talk:Hemant wikikosh|वार्ता]]) १२:३३, २६ सेप्टेम्बर २०१२ (UTC)
+== अनुवादो आरद्धो ==
+पिय पाठका। एत्थाहं टान्सलेटविकीति (translatewiki.net) जालठले एतस्स जालठलस्स अन्तराफलक-सन्देसानं अनुवादं करोमि। करहिचि कोपि दोसो दिस्सति चे, मं सूचेन्तु। दस्सनत्थं [https://translatewiki.net/wiki/Special:Contributions/Hemant_wikikosh1 एत्थ] किलिक्करोतु। एतस्मिं येव सोधन-कमे कुत्थचि अधिकारानं आवस्सकता होति, तदत्थं मया पबन्धकत्तं पत्तं। -[[User:Hemant wikikosh|Hemant wikikosh]] ([[User talk:Hemant wikikosh|वार्ता]]) १७:१७, ८ ओक्टोबर २०१२ (UTC)
 
-Greetings from Wikimedia India.
+==Invitation  to Telugu Wikipedia Dasabdi Vedukalu 2014 == 
 
-Wiki Loves Food (WLF) is a public photo competition on Wikimedia Commons for use on Wikipedia and other project websites of the Wikimedia Foundation. Wikimedia India Chapter will be running this contest. The aim of this project is to improve the quality of pictures of different cuisines of India & the world. Currently under planning, this project will be on a Pan-India scale.
+<div style="margin: 0.5em; border: 2px black solid; padding: 1em;background-color:#E3F0F4" >
+{| style="border:1px black solid; padding:2em; border-collapse:collapse; width:100%;"
+|-
+[[File:Tewiki10 banner.png|800px|center|link=:te:WP:Tewiki10]]<br/>
+|- 
+! style="background-color:#FAFAFA; color:#1C2069; padding-left:2em; padding-top:.5em;" align=left |Hi Pali Community members,
+<span class="plainlinks">
+Telugu Wikipedia community is celebrating its 10th anniversary celebrations at Vijayawada on 15th & 16th February 2014.<br> You can see our [http://te.wikipedia.org/wiki/WP:Tewiki10  Official event page at te wiki] and the [https://www.facebook.com/events/715648715120729  Facebook event] page.
+<br />
+We have also planned a lot of activities pre event and post event, on-wiki and off-wiki. <br />
 
-The contest is to celebrate Indian Cuisine's diversity and beauty. Any photograph related to food in India can be entered.
-We would like to see ANY image about Indian food added to Commons and we will be handing out bigger prizes to entice people to participate and donate their photos to Commons. This is a ONE TIME contest, at this moment, to educate people about and promote donating images to Commons on a national scale. India has a vibrant photography community and we hope to significantly increase Indian Food related photographs on Commons through this contest campaign. More people will access and contribute to Wikipedia and its sister projects. We believe that, other communities shall also replicate the same, and we shall be able to lend our strong support.
+</span>
 
-To ensure full Participation of the whole Indian Community, we invite 2 nominations from Pali Language Community.
+== WikiConference 2016 ==
 
-Please find more details on this link.
-https://commons.wikimedia.org/wiki/Commons:Wiki_Loves_Food
-For any doubts, please feel free to email us at wikilovesfood@gmail.com
+<div style="margin: 0.5em; border: 2px black solid; padding: 1em;background-color:#E3F0F4" >
+{| style="border:1px black solid; padding:2em; border-collapse:collapse; width:100%;"
+|-
+! style="background-color:#FAFAFA; color:black; padding-left:2em; padding-top:.5em;" align=left |
+Hello Everyone,
+
+The first  '''[[:meta:WikiConference India 2011|WikiConference India]]''' happened in 2011. It was the only pan-Indian Wikimedia Conference in the 14 years of history of Wikipedia since it started in 2001.
+
+'''[[:meta:WikiConference India 2016|WikiConference India 2016]]''' (WCI 2016) is an outcome of [https://wikimania2015.wikimedia.org/wiki/Indic_Meetup Indic Meetup] held during [https://wikimania2015.wikimedia.org/wiki/Wikimania Wikimania 2015]. We had a collective dream to bid for Wikimania 2019 on behalf of India. If we need to run a Wikimania successfully, it is time that the Wikimedia community of all languages in India reboots itself and works together towards that. Conducting a WikiConference India first will be a good start towards achieving that goal. This will help us assess our strengths and weakness and plan accordingly for Wikimania 2019. This is our bet to prove our unity in diversity :) We would like all of Indic Language community volunteers to prove our spirit, strength and Unity. 
+Please sign up [https://docs.google.com/forms/d/1R9skceycTFRpXs9pJASXGoWgZo0ZVwjnEAtPdlQ_EU8/viewform?usp=send_form here]
+
+We have called for [[:meta:WikiConference India 2016/Community and Team/Call for Volunteer Support|translation of the message]] in your own language, which went unresponded, thats why we have to post this message in English. Our sincerest apologies.
+
+Regards,
+
+WCI 2016 Volunteers
+|}</div>
+
+We look forward to see you at Vijayawada on 15-16 February 2014   
+|}</div>
+[[User:Pranayraj1985|Pranayraj1985]] ([[User talk:Pranayraj1985|वार्ता]]) १४:१२, ४ फ़रवरी २०१४ (UTC), Secretary, [https://te.wikipedia.org/wiki/%E0%B0%B5%E0%B0%BF%E0%B0%95%E0%B1%80%E0%B0%AA%E0%B1%80%E0%B0%A1%E0%B0%BF%E0%B0%AF%E0%B0%BE:%E0%B0%A4%E0%B1%86%E0%B0%B5%E0%B0%BF%E0%B0%95%E0%B1%80_%E0%B0%A6%E0%B0%B6%E0%B0%BE%E0%B0%AC%E0%B1%8D%E0%B0%A6%E0%B0%BF_%E0%B0%89%E0%B0%A4%E0%B1%8D%E0%B0%B8%E0%B0%B5%E0%B0%BE%E0%B0%B2%E0%B1%81-Tewiki_10th_Anniversary/Committee Tewiki 10th Organizing Committee](Sorry for writing in English)
