/* Invitation  to Telugu Wikipedia Dasabdi Vedukalu 2014 */

--- a/मन्तन_ठान_Mantana_ṭhāna.mw
+++ b/मन्तन_ठान_Mantana_ṭhāna.mw
@@ -16,6 +16,7 @@ Telugu Wikipedia community is celebrating its 10th anniversary celebrations at V
 We have also planned a lot of activities pre event and post event, on-wiki and off-wiki. <br />
 
 </span>
+</div>
 
 == WikiConference 2016 ==
 
