--- a/पाळि.mw
+++ b/पाळि.mw
@@ -1,8 +1,1 @@
-पाली भाषा बुद्धाशा सबसा होति। अजापि अन्तरा भिक्खु पालि भाषा कथेति। इमे पथा पालिभाषाया लिखिता होन्ति। [http://wikisource.org/wiki/Main_Page:Pali विकिमुला - पालि]
-
-palibhasa buddhassa sabhasa hoti. Ajjapi annatara bhikkhu palibhasa kathenti. Ime patha palibhasaya likhita honti: [http://wikisource.org/wiki/Main_Page:Pali Vikhimula - Pali]
-
-==अभिञ्ञाणा==
-<references />
-
-[[विभाग:भाषा]]
+#REDIRECT [[पालि Pāli]]
