*Empty MediaWiki Message*

--- a/Nāvā.mw
+++ b/Nāvā.mw
@@ -1,5 +1,5 @@
 [[File:AssyrianWarship.jpg|thumb|]]
-Nāvā (नावा) - ayaṃ [[udaka]]ssa pariplavo [[ratha|ratho]] hoti.
+Nāvā (नावा) — ayaṃ [[udaka]]ssa pariplavo [[ratha|ratho]] hoti.
 
 :"bhūtapubbaṃ, [[bhikkhu]], [[samudda|sāmuddikā]] vāṇijā tīradassiṃ [[sakuṇa]]ṃ gahetvā '''nāvāya''' samuddaṃ ajjhogāhanti." (Kevaṭṭasutta)
 
