--- a/Nāvā.mw
+++ b/Nāvā.mw
@@ -1,6 +1,6 @@
 [[File:AssyrianWarship.jpg|thumb|]]
 Nāvā (नावा) — ayaṃ [[udaka]]ssa pariplavo [[ratha|ratho]] hoti.
 
-:"bhūtapubbaṃ, [[bhikkhu]], [[samudda|sāmuddikā]] vāṇijā tīradassiṃ [[sakuṇa]]ṃ gahetvā '''nāvāya''' samuddaṃ ajjhogāhanti." (Kevaṭṭasutta)
+:"bhūtapubbaṃ, [[bhikkhu]], sāmuddikā vāṇijā tīradassiṃ [[sakuṇa]]ṃ gahetvā '''nāvāya''' [[samudda|samuddaṃ]] ajjhogāhanti." (Kevaṭṭasutta)
 
 [[विभाग:samudda]]
