*Empty MediaWiki Message*

--- a/Nāvā.mw
+++ b/Nāvā.mw
@@ -1,5 +1,5 @@
 [[File:AssyrianWarship.jpg|thumb|]]
-Nāvā (नावा) — ayaṃ [[udaka]]ssa pariplavo [[ratha|ratho]] hoti.
+Nāvā (नावा, නාවා, นาวา) — ayaṃ [[udaka]]ssa pariplavo [[ratha|ratho]] hoti.
 
 :"bhūtapubbaṃ, [[bhikkhu]], sāmuddikā vāṇijā tīradassiṃ [[sakuṇa]]ṃ gahetvā '''nāvāya''' [[samudda|samuddaṃ]] ajjhogāhanti." (Kevaṭṭasutta)
 
