*Empty MediaWiki Message*

--- a/मिसिसिप्पी.mw
+++ b/मिसिसिप्पी.mw
@@ -4,8 +4,8 @@
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
-| align="center" width="140px" | [[पटिमा:Flag_of Mississippi.svg|125px]]
-| align="center" width="140px" | [[पटिमा:Seal of Mississippi.svg|125px]]
+| align="center" width="140px" | [[पटिमा:Flag_of Mississippi.svg|border|125px]]
+| align="center" width="140px" | [[पटिमा:Seal of Mississippi.jpg|125px]]
 |-
 | align="center" width="140px" | 
 | align="center" width="140px" | 
