--- a/पमुख_पत्त_Pamukha_patta.mw
+++ b/पमुख_पत्त_Pamukha_patta.mw
@@ -65,40 +65,40 @@ font-size: 125%; line-height: 1.3">
 
 {{Index}}
 {|
-=== विषय सुची ===
+===विसयसूची===
 
 |- 
 | width="50%" valign="top" | 
 {| width="100%"  border="0" cellspacing="0" cellpadding="5"
 | width="10%" | [[Image:Nuvola apps kalzium.png|50px|Zienziah Naturaleh]]
 | width="90%" style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[गणितं]] ,  [[पक्कति]] व [[विञ्ञाणं]]'''<br/><font color="green">
-[[खगोल विञ्ञाणं]] - [[जीव विञ्ञाणं]] - [[रसायन विञ्ञाणं]] - [[सुशांख्य यन्त्र विञ्ञाणं]](कम्प्युटर विञ्ञाणं)  - [[वातावरण विञ्ञाणं]] - [[रेखा विञ्ञाणं]](ज्यामिति) - [[गणितं]] - [[भौतिक विञ्ञाणं]] - [[पशु विञ्ञाणं]]
+[[खगोलविञ्ञाणं]] - [[जीवविञ्ञाणं]] - [[रसायनविञ्ञाणं]] - [[यन्तविञ्ञाणं]](संगणकविञ्ञाणं)  - [[वातावरणविञ्ञाणं]] - [[रेखाविञ्ञाणं]](ज्यामिति) - [[गणितं]] - [[भोतिकविञ्ञाणं]] - [[पसुविञ्ञाणं]]
 </font>
 |- 
 | [[Image:Nuvola apps package network.png|50px|Zienziah Zozialeh]]
-| style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[मनुष्य]] व [[सामाजिक विज्ञान]] '''<br/><font color="green">
-[[मनुष्य विञ्ञाणं]](एन्थ्रोपोलोजी) - [[पूरातत्त विञ्ञाणं]] - [[भूगोलं]] - [[अध्ययन शास्त्रं]] - [[इतिहासो]] - [[भासा]] - [[दस्सन विञ्ञाणं]] - [[चिन्तनशास्त्रं]](साइकोलोजी) - [[धम्मो]] - [[समाज विञ्ञाणं]]</font>
+| style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[मनुस्सो]] व [[सामाजिकविञ्ञाणं]] '''<br/><font color="green">
+[[मनुस्सविञ्ञाणं]](एन्थ्रोपोलोजी) - [[पुरातनविञ्ञाणं]] - [[भूगोलं]] - [[अज्झयनसत्तं]] - [[इतिहासो]] - [[भासा]] - [[दस्सनविञ्ञाणं]] - [[चिन्तनसत्तं]](साइकोलोजी) - [[धम्मो]] - [[समाजविञ्ञाणं]]</font>
 '''</big><br/>
 
 |- 
 | [[Image:Nuvola apps mycomputer.png|50px|Teknolohía]]
-| style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[कार्य विञ्ञाणं]]'''<br/><font color="green">
-[[कृषि विञ्ञाणं]] - [[गेह विञ्ञाणं]] - [[संचारो]] - [[ऋणाणु विञ्ञाणं (ईलेक्त्रोनिक)]] - [[यन्त्रशास्त्र]](ईन्जिन्यरिङ) - [[स्वास्थ्य]] - [[उद्योग]] - [[चिकित्सा विञ्ञाणं]] - [[परिवहनं]] - [[मौसम]]</font>
+| style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[किच्चविञ्ञाणं]]'''<br/><font color="green">
+[[कसिविञ्ञाणं]] - [[गेहविञ्ञाणं]] - [[संचारो]] - [[इणाणुविञ्ञाणं (ईलेक्त्रोनिक)]] - [[यंतसत्तं]](ईन्जिन्यरिङ) - [[आरोग्यं]] - [[उद्योग]] - [[तिकिच्चाविञ्ञाणं]] - [[परिवहनं]] - [[मौसम]]</font>
 |}
 | width="50%" valign="top" | 
 {| width="100%"  border="0" cellspacing="0" cellpadding="5"
 | width="10%" | [[Image:Nuvola apps kcoloredit.png|50px|Arte i Kurtura]]
 | width="90%" style="font-family: unicode; font-size:medium; border-top: 1px dashed #AAAAAA;" | '''[[कला]] च [[सक्कति]]'''<br/><font color="green"> 
-[[कला]] - [[पोत्थकं]] - [[पकवान]] - [[सक्कति]] - [[नच्चं]] - [[चलचित्तं]] - [[संगीतं]] - [[रेडियो]] - [[क्रीडा]] - [[नाटकं]] - [[सयल (विहार)]] - [[दूरसंचार यन्त्रं]](टेलिफोन) - [[दूरदस्सन यन्त्रं]](टेलिभिजन) </font>
+[[कला]] - [[पोत्थकं]] - [[ब्यंजनं]] - [[सक्कति]] - [[नच्चं]] - [[चलचित्तं]] - [[संगीतं]] - [[रेडियो]] - [[कीडा]] - [[नाटकं]] - [[सयल (विहार)]] - [[दूरसंचारयन्तं]](टेलिफोन) - [[दूरदस्सनयन्तं]](टेलिविजन) </font>
 |- 
 | [[Image:Nuvola apps atlantik.png|50px|Entretenimientoh]]
-| style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[अन्य]]'''<br/>
+| style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[अञ्ञ]]'''<br/>
 <font color="green">
-[[नेपाल]] - [[पाली भाषा]] - [[जीवनी]] - [[बुध्दो]] </font> 
+[[नेपालं]] - [[पालिभाषा]] - [[जीवनी]] - [[बुध्दो]] </font> 
 |- 
 | [[Image:Nuvola apps kwrite.png|50px|Index]]
 | style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[संविधान]] व [[राज्य]]'''<br/><font color="green">
-[[लेखाधिकार]] - [[देश]] - [[अर्थतन्त्र]] -  [[मनुष्य अधिकार]] - [[विधान]]- [[सेना]] - [[राज्यनीति]] - [[व्यापार]] </font> 
+[[लेखाधिकारो]] - [[देश]] - [[अर्थतन्त्र]] -  [[मनुष्य अधिकार]] - [[विधान]]- [[सेना]] - [[राज्यनीति]] - [[व्यापार]] </font> 
 |}
 |}
 </div>
