--- a/पमुख_पत्त_Pamukha_patta.mw
+++ b/पमुख_पत्त_Pamukha_patta.mw
@@ -98,7 +98,7 @@ font-size: 125%; line-height: 1.3">
 |- 
 | [[Image:Nuvola apps kwrite.png|50px|Index]]
 | style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[संविधान]] व [[राज्य]]'''<br/><font color="green">
-[[लेखाधिकारो]] - [[देश]] - [[अर्थतन्त्र]] -  [[मनुष्य अधिकार]] - [[विधान]]- [[सेना]] - [[राज्यनीति]] - [[व्यापार]] </font> 
+[[लेखाधिकारो]] - [[देसो]] - [[अत्थतन्तं]] -  [[मनुस्सधिकारो]] - [[विधानं]]- [[सेना]] - [[रञ्ञनीति]] - [[ब्यापारो]] </font> 
 |}
 |}
 </div>
@@ -113,7 +113,7 @@ font-size: 125%; line-height: 1.3">
 {| cellspacing="0" cellpadding="0" style="border-left:1px solid #991066; border-right:1px solid #991066;"
 | width="100%" valign="top" bgcolor="#FBEAF5" style="border-bottom:1px solid #991066;"|
 {| cellspacing="0" cellpadding="5" style="border-top:1px solid #991066;"
-! align="center" bgcolor="#EEE0E2" |<big>''' अन्य भाषासु विकिपीडिया'''</big>
+! align="center" bgcolor="#EEE0E2" |<big>''' अञ्ञभाषासु विकिपीडिया'''</big>
 |-
 | style="border-top:1px solid #991066; font-size:85%; padding:5px 20px" align="justify" bgcolor="#FBFAF5"|
 
@@ -208,4 +208,4 @@ font-size: 125%; line-height: 1.3">
 [[ur:]]
 [[vi:]]
 [[bpy:পালি (ললিতপুর)]]
-[[hi:पाली]]
+[[hi:पालि]]
