--- a/पमुख_पत्त_Pamukha_patta.mw
+++ b/पमुख_पत्त_Pamukha_patta.mw
@@ -1,7 +1,7 @@
 <br />
 <div style="background-color:#FFFBF0; padding:10px; "> 
 <p style="text-align: center">
-<big>''' पाळिभासा विकिनिखिलकोसो <br> Pālibhāsā vikinikhilakoso '''</big>
+<big>''' पाळिभासा-विकिनिखिलकोसो <br> Pālibhāsā vikinikhilakoso '''</big>
 
 </p>
 <p style="text-align: center"> 
@@ -14,7 +14,7 @@ font-size: 125%; line-height: 1.3">
 ''इमस्मिं निखिलकोसे यो को'पि लिखितुं सक्कोति।! सहायता एत्थ विज्जति:''''[http://www.saigon.com/~anson/ebud/dict-ep/ आङलभाषा-पाली]'' 
 ''अयं निखिलकोसो आरद्धो फुस्समासे १६, २५४९।'' 
 ''एत्थ पन [[Special:Statistics|<font color="green" size="+1">'''{{NUMBEROFARTICLES}}'''</font>]]  लेखा लिखिता होन्ति|'' 
-''अपि च खो सब्बे लेखा आबध्दा भबेतब्बा| (GNU)।'' 
+''अपि च खो सब्बे लेखा आबध्दा भवेतब्बा| (GNU)।'' 
 ''अभ्यासत्थाय [[Wikipedia:Help|सहायता]] अथवा  [[Wikipedia:Sandbox|पयोगट्ठले]] गच्छन्तु । हेट्ठा लेखनाय सुविधाय ठलानि सन्ति -'' 
 </p>
 <p style="margin: 0.5em 0 0 3%; text-align: center; 
@@ -36,7 +36,7 @@ font-size: 125%; line-height: 1.3">
 | align="right" valign="top" style="background:#FFFBF0; border: 1px solid silver; padding:10px"|
 <div style="direction:ltr; font-family:tahoma"> 
 {|
-'''[[जगद्गुरुरामभद्राचार्यः Jagadgururāmabhadrācāryaḥ|जगद्गुरुरामभद्राचार्यः]]''' (हिन्दी:जगद्गुरु रामभद्राचार्य) (१९५०-), पूरिमानाम गिरिधरमिश्रः, चित्रकूट (उत्तर प्रदेश, भारतदेस) अधिवुत्थ एका उन्नद् पण्दित, अज्झापनायत्त आचरिय, नानाभासिक, रचयिता, चित्तकथी, अज्झत्तधम्मविदू च इन्दीय धम्मायत्त नेतु अस्तु। सो रामानन्द पटिपाटिनिज वत्तमान कटु जगद्गुरु रामानन्दाचार्या अंटो एका अस्तु च अमू अवत्था अंटो १९८८ पभूति। सो चित्रकूट पतिट्ठित अरहनता तुलसीदास निज नाम ऊपरी पवत्तितो तुलसी पीठ अभिहिता धममिका च समाजहित सेवा विज्जाधरपरिसा निज पतिट्ठापेतु च सभापति अस्तु। सो चित्रकूट पतिट्ठित जगद्गुरु रामभद्राचार्य अवसादेति निखिलविज्जालय निज पतिट्ठापेतु च यावजीविको अक्खदस्सामच्च अस्तु।('''[[जगद्गुरुरामभद्राचार्यः Jagadgururāmabhadrācāryaḥ| अधिका पठि...]]''')
+'''[[जगतगुरुरामभद्दाचरियो Jagadgururāmabhadrācāryaḥ|जगद्गुरुरामभद्राचार्यः]]''' (हिन्दी: जगद्गुरु रामभद्राचार्य) (१९५०-), पूरिमानाम गिरिधरमिश्रः, चित्रकूट (उत्तर प्रदेश, भारतदेस) अधिवुत्थ एको पण्डितो, अज्झापनायत्त आचरियो, नानाभासिको, रचयिता, चित्तकथी, अज्झत्तधम्मविदू च इन्दीय धम्मायत्त नेतु अस्तु। सो रामानन्द पटिपाटिनिज वत्तमान कटु जगद्गुरु रामानन्दाचार्या अंटो एका अस्तु च अमू अवत्था अंटो १९८८ पभूति। सो चित्रकूट पतिट्ठित अरहनता तुलसीदास निज नाम ऊपरी पवत्तितो तुलसी पीठ अभिहिता धममिका च समाजहित सेवा विज्जाधरपरिसा निज पतिट्ठापेतु च सभापति अस्तु। सो चित्रकूट पतिट्ठित जगद्गुरु रामभद्राचार्य अवसादेति निखिलविज्जालय निज पतिट्ठापेतु च यावजीविको अक्खदस्सामच्च अस्तु। '''[[अधिका पठि...]]''')
 |<big>'''Ajja nija mukhyakoṭṭhāsa bhaṇḍha'''</big>
 '''[[जगद्गुरुरामभद्राचार्यः Jagadgururāmabhadrācāryaḥ|Jagadgururāmabhadrācāryaḥ]]''' (hindī:jagadguru rāmabhadrācārya) (१९५०-), pūrimānāma giridharamiśraḥ, citrakūṭa (uttara pradeśa, bhāratadesa) adhivuttha ekā unnad paṇdita, ajjhāpanāyatta ācariya, nānābhāsika, racayitā, cittakathī, ajjhattadhammavidū ca indīya dhammāyatta netu astu. So rāmānanda paṭipāṭinija vattamāna kaṭu jagadguru rāmānandācāryā aṃṭo ekā astu ca amū avatthā aṃṭo १९८८ pabhūti. So citrakūṭa patiṭṭhita arahanatā tulasīdāsa nija nāma ūparī pavattito tulasī pīṭha abhihitā dhamamikā kā samājahita sevā vijjādharaparisā nija patiṭṭhāpetu ca sabhāpati astu. So citrakūṭa patiṭṭhita jagadguru rāmabhadrācārya avasādeti nikhilavijjālaya nija patiṭṭhāpetu ca yāvajīviko akkhadassāmacca astu.('''[[जगद्गुरुरामभद्राचार्यः Jagadgururāmabhadrācāryaḥ| Adhikā paṭhi...]]''')
 |}
