--- a/पमुख_पत्त_Pamukha_patta.mw
+++ b/पमुख_पत्त_Pamukha_patta.mw
@@ -71,12 +71,12 @@ font-size: 125%; line-height: 1.3">
 | width="50%" valign="top" | 
 {| width="100%"  border="0" cellspacing="0" cellpadding="5"
 | width="10%" | [[Image:Nuvola apps kalzium.png|50px|Zienziah Naturaleh]]
-| width="90%" style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[गणितं]] ,  [[पक्कति]] व [[विञ्ञाणं]]'''<br/><font color="green">
+| width="90%" style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[गणितं]] ,  [[पक्कति]] च [[विञ्ञाणं]]'''<br/><font color="green">
 [[खगोलविञ्ञाणं]] - [[जीवविञ्ञाणं]] - [[रसायनविञ्ञाणं]] - [[यन्तविञ्ञाणं]](संगणकविञ्ञाणं)  - [[वातावरणविञ्ञाणं]] - [[रेखाविञ्ञाणं]](ज्यामिति) - [[गणितं]] - [[भोतिकविञ्ञाणं]] - [[पसुविञ्ञाणं]]
 </font>
 |- 
 | [[Image:Nuvola apps package network.png|50px|Zienziah Zozialeh]]
-| style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[मनुस्सो]] व [[सामाजिकविञ्ञाणं]] '''<br/><font color="green">
+| style="font-family: unicode; font-size: medium; border-top: 1px dashed #AAAAAA;" | '''[[मनुस्सो]] च [[सामाजिकविञ्ञाणं]] '''<br/><font color="green">
 [[मनुस्सविञ्ञाणं]](एन्थ्रोपोलोजी) - [[पुरातनविञ्ञाणं]] - [[भूगोलं]] - [[अज्झयनसत्तं]] - [[इतिहासो]] - [[भासा]] - [[दस्सनविञ्ञाणं]] - [[चिन्तनसत्तं]](साइकोलोजी) - [[धम्मो]] - [[समाजविञ्ञाणं]]</font>
 '''</big><br/>
 
