*Empty MediaWiki Message*

--- a/पमुख_पत्त_Pamukha_patta.mw
+++ b/पमुख_पत्त_Pamukha_patta.mw
@@ -11,7 +11,7 @@
 <p style="margin: 0.5em 0 0 3%; text-align: center; 
 font-size: 125%; line-height: 1.3">
 ''सागतं! एत्थ विकिपीडिया ति निखिलकोसे।'' 
-''इमस्मिं निखिलकोसे यो को'पि लिखितुं सक्कोति।! सहायता एत्थ विज्जति:''''[http://www.saigon.com/~anson/ebud/dict-ep/ आङलभाषा-पाली]'' 
+''इमस्मिं निखिलकोसे यो को'पि लिखितुं सक्कोति।! सहायता एत्थ विज्जति:''''[http://www.saigon.com/~anson/ebud/dict-ep/ आंग्लभासा-पालि]'' 
 ''अयं निखिलकोसो आरद्धो फुस्समासे १६, २५४९।'' 
 ''एत्थ पन [[Special:Statistics|<font color="green" size="+1">'''{{NUMBEROFARTICLES}}'''</font>]]  लेखा लिखिता होन्ति|'' 
 ''अपि च खो सब्बे लेखा आबध्दा भवेतब्बा| (GNU)।'' 
@@ -54,8 +54,8 @@ font-size: 125%; line-height: 1.3">
 * [http://www.indiver.com/nepali.php इन्दीवर नेपाली सम्पादक]
 * [http://www.aksharamala.com अक्षरमाला] खुला, सरल [[युनिकोड]] [[देवनागरी]] [[सफ्टवेर]]
 * [[:en:Unicode | युनिकोड अङ्ग्रेजी विकिपीडिया]] ([[युनिकोड]])
-* [[:en:Devanagari | देवनागरी (अङ्ग्रेजी)]] ([[:sa:देवनागरी|संस्‍कृतं अनुवाद]])
-* [http://www.aksharamala.com/download/free/ अक्षरमाला डाउनलोड (खुला)]
+* [[:en:Devanagari | देवनागरी (अङ्ग्रेजी)]] ([[:sa:देवनागरी|सक्कत-अनुवादो]])
+* [http://www.aksharamala.com/download/free/ अक्खरमाला (अक्षरमाला) डाउनलोड (खुला)]
 * [http://www.aczone.com/itrans/ ITRANS]
 * [http://www.chhahari.com/unicode/ छहारी नेपाली / देवनागरी टाईपराइटर]
 |}
