*Empty MediaWiki Message*

--- a/महाजनपद.mw
+++ b/महाजनपद.mw
@@ -1,7 +1,18 @@
 '''महाजनपद''' बुद्धकालीन गणराज्य अस्तु। महाजनपद राज्ज नामः-
-*लिच्छवि
-*मल्ल
-*वृज्जी
+*अंग
+मगध
+काशी
+वज्जि
+मल्ल
+कोशल
+वत्स
+चेदि
+पांचाल
+कुरु
+सूरसेन
+मत्स्य
+अवन्ति
+अश्मक या अस्सक
 
 
 [[Category:भारतीय इतिहास]]
