--- a/असमरज्जं.mw
+++ b/असमरज्जं.mw
@@ -116,9 +116,9 @@ Editing Meghalaya
 
 ==वीथिका==
 <gallery>
+File:State flag of Assam.png|
 File:Guwahati City.jpg|'''गोवाहटिनगरम्'''
 File:Jorhat.jpg
-
 File:Kanaklata Udyan, Tezpur.jpg
 File:Academic complex iitg.jpeg
 File:Brahmaputra aerial view.jpg|'''ब्रह्मपुत्रानदी'''
