--- a/मिसिसिप्पी.mw
+++ b/मिसिसिप्पी.mw
@@ -5,7 +5,7 @@
 {| border="0" cellpadding="2" cellspacing="0"
 |-
 | align="center" width="140px" | [[पटिमा:Flag_of Mississippi.svg|border|125px]]
-| align="center" width="140px" | [[पटिमा:Seal of Mississippi 2014.svg|125px]]
+| align="center" width="140px" | [[पटिमा:Seal of Mississippi (2014).svg|125px]]
 |-
 | align="center" width="140px" | 
 | align="center" width="140px" | 
