/* The visual editor is now active here */ +update

--- a/मन्तन_ठान_Mantana_ṭhāna.mw
+++ b/मन्तन_ठान_Mantana_ṭhāna.mw
@@ -95,3 +95,5 @@ Happy editing!
 Respectfully, [[:mw:User:Elitre (WMF)|Elitre (WMF)]] १९:१५, ३० अगस्त २०१६ (UTC)
 
 PS: Are you seeing interface messages that are not in this wiki's language? Please fix this by providing translations [https://translatewiki.net/w/i.php?title=Special:Translate&group=ext-visualeditor-0-all&filter=%21translated&action=translate here]. Translations may be also provided for the [[:mw:Help:VisualEditor/User_guide|user guide]]. Please contact me if you want guidance in contributing translations!
+<div lang="en" dir="ltr" class="mw-content-ltr">
+:Just a heads-up that rollout of the visual editor on this wiki is now complete. Please refer to my previous messages for details. You can [[:mw:Help:VisualEditor/VE_as_the_main_editor|read the "checklist"]] that was written to help communities like yours in their process of adapting the visual editor to their customs and needs. Best, [[:mw:User:Elitre (WMF)|Elitre (WMF)]] १८:३१, ६ सेप्टेम्बर २०१६ (UTC) </div>
