Removing "100_years_Badge.jpg", it has been deleted from Commons by [[commons:User:Storkk|Storkk]] because: per [[:c:Commons:Deletion requests/File:100 years Badge.jpg|]].

--- a/नेपाल_स्काउट.mw
+++ b/नेपाल_स्काउट.mw
@@ -1,3 +1,3 @@
-[[File:100 years Badge.jpg|thumb|100 years Badge issued by Nepal Scout in occasion of 100 years of [[World Scouting]]]]<!---Please change the caption, cause i don't know your language--->
+<!---Please change the caption, cause i don't know your language--->
 '''नेपाल स्काउट''' [[नेपाल]]स्यः स्काउटिंग व गाइडिंग संस्था अस्तु।
 [[Category:स्काउट]]
