--- a/Nāvā.mw
+++ b/Nāvā.mw
@@ -1,6 +1,6 @@
-[[File:AssyrianWarship.jpg|thumb|]]
+[[पटिमा:AssyrianWarship.jpg|thumb|]]
 Nāvā (नावा, නාවා, นาวา) — ayaṃ [[udaka]]ssa pariplavo [[ratha|ratho]] hoti.
 
 :"bhūtapubbaṃ, [[bhikkhu]], sāmuddikā vāṇijā tīradassiṃ [[sakuṇa]]ṃ gahetvā '''nāvāya''' [[samudda|samuddaṃ]] ajjhogāhanti." (Kevaṭṭasutta)
 
-[[विभाग:samudda]]
+[[विभाग:Samudda]]
