*Empty MediaWiki Message*

--- a/अघगाल्लों.mw
+++ b/अघगाल्लों.mw
@@ -5,6 +5,6 @@
 
 == गन्थवंस ==
 
-[[Category:उत्तर आयरलैंडस्य ग्राम]]
-[[Category:ग्राम]]
-[[Category:उत्तर आयरलैंड]]
+[[विभाग:उत्तर आयरलैंडस्य ग्राम]]
+[[विभाग:ग्राम]]
+[[विभाग:उत्तर आयरलैंड]]
