*Empty MediaWiki Message*

--- a/अघदृम्सी.mw
+++ b/अघदृम्सी.mw
@@ -1,10 +1,10 @@
-'''{{PAGENAME}}''' उत्तर आयरलैंडस्य ग्राम अस्तु। 
+'''{{PAGENAME}}''' उत्तर आयरलैंडस्य ग्राम अस्तु।
 
 == अभिञ्ञाणा ==
 <references />
 
 == गन्थवंस ==
 
-[[Category:उत्तर आयरलैंडस्य ग्राम]]
-[[Category:ग्राम]]
-[[Category:उत्तर आयरलैंड]]
+[[विभाग:उत्तर आयरलैंडस्य ग्राम]]
+[[विभाग:ग्राम]]
+[[विभाग:उत्तर आयरलैंड]]
