*Empty MediaWiki Message*

--- a/पब्बतो.mw
+++ b/पब्बतो.mw
@@ -1,1 +1,2 @@
+[[पटिमा:ויקיפדיה אוהבת אתרי מורשת 2014 - אתרי עתיקות בצפון הארץ - מבצר יחיעם (38).JPG|thumb|पब्बतो]]
 पब्बतो तु एको भू-आकारो यो तु परिवेट्ठक धरातलम्हा उत्तुंगो होति, सामाञ्ञतो तस्स सिखरो'पि होति। पठवियं उत्तुंगतमो पब्बतो एवरेस्ट ति अत्थि, यो तु एसिया-महादीपे हिमालयेसु अत्थि। सोरमंडले सब्बोच्चो पब्बतो ओलिम्पस मोन्स् ति मंगलग्गहे अत्थि। भूतले पब्बता ठलमंडलस्स पट्टिकानं गतिया तथा च परस्परं कियाय उब्भूता होन्ति।
