--- a/भारत.mw
+++ b/भारत.mw
@@ -13,7 +13,7 @@
 |-
 | align="center" colspan=2 | <small></big>
 |-
-| align=center colspan=2 | [[पटिमा:India in its region (undisputed).svg|300px]]
+| align=center colspan=2 | [[पटिमा:India in its region (claimed).svg|300px]]
 |}
 
 '''भारत''' गणराज्य एकस्य दक्खिन एसियाली राष्ट्र अस्तु।
