Replacing Flag_of_Washington,_D.C..svg with [[File:Flag_of_the_District_of_Columbia.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (Harmonizing Names of File Set)).

--- a/वासिंगटन_डि_सि.mw
+++ b/वासिंगटन_डि_सि.mw
@@ -4,7 +4,7 @@
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
 |-
-| align="center" width="140px" | [[पटिमा:Flag_of_Washington,_D.C..svg|125px]]
+| align="center" width="140px" | [[पटिमा:Flag of the District of Columbia.svg|125px]]
 | align="center" width="140px" | [[पटिमा:Seal_of_Washington,_D.C..png|125px]]
 |-
 | align="center" width="140px" | 
