Replacing Map_of_USA_MT.svg with [[File:Map_of_U.S._-_MT.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:WP:NOTUSA|]]).

--- a/मोन्टाना.mw
+++ b/मोन्टाना.mw
@@ -13,7 +13,7 @@
 |-
 | align="center" colspan=2 | <small></big>
 |-
-| align=center colspan=2 | [[पटिमा:Map of USA MT.svg|300px]]
+| align=center colspan=2 | [[पटिमा:Map of U.S. - MT.svg|300px]]
 |}
 
 '''मोन्टाना'''
