--- a/मकाजी_मेघपर.mw
+++ b/मकाजी_मेघपर.mw
@@ -1,1 +1,3 @@
-'''मकाजी मेघपर'''<ref>{{Arjun Sinh Jadeja|url=http://www.sasnet.lu.se/EASASpapers/23McLeod.pdf |first=John |last=Mcleod |title=The Rise and Fall of the Kutch Bhayati |publisher=Eighteenth European Conference on Modern South Asian Studies, University of Lund |date=6–9 July 2004 |page=5 |accessdate=13 September 2012 |deadurl=yes |archiveurl=https://web.archive.org/web/20120307204736/http://www.sasnet.lu.se/EASASpapers/23McLeod.pdf |archivedate=7 March 2012 |df= }}</ref><ref>[http://www.census2011.co.in]</ref><ref>{{cite web|url=http://www.harilalupadhyay.org|title=Online Tribute To The Great Gujarati Author - Late Shri Harilal Upadhyay|first=Jiten|last=Upadhyay|work=harilalupadhyay.org}}</ref> एकस्य दक्खिन सोरठाली ग्राम<ref>{{cite web|title=Gram Panchayat Identification Codes|url=http://saaksharbharat.nic.in/saaksharbharat/forms/gp_code.pdf|website=Saakshar Bharat Mission|accessdate=5 July 2016|page=120|format=PDF}}</ref> अस्तु।
+'''मकाजी मेघपर'''<ref name = Census2011>[http://www.census2011.co.in]</ref><ref name = हरिलाल उपाध्याय>{{cite web|url=http://www.harilalupadhyay.org|title=Online Tribute To The Great Gujarati Author - Late Shri Harilal Upadhyay|first=Jiten|last=Upadhyay|work=harilalupadhyay.org}}</ref> एकस्य सोरठाली ग्राम<ref>{{cite web|title=Gram Panchayat Identification Codes|url=http://saaksharbharat.nic.in/saaksharbharat/forms/gp_code.pdf|website=Saakshar Bharat Mission|accessdate=5 July 2016|page=120|format=PDF}}</ref> अस्तु।
+
+[[पटिमा:MMeghpar FLAG.jpg|thumb|मकाजी मेघपरस्य ध्वजः]]
