--- a/नेपाल.mw
+++ b/नेपाल.mw
@@ -1,1 +1,9 @@
+'''नेपाल''', एका दक्खिन एशियाली राष्ट्र अस्तु।
 
+[[Image:Flag of Nepal.svg|thumb|center|राष्ट्र ध्वजः]]
+[[Image:Emblem of Nepal.svg|thumb|center|राज्यमुद्रा]]
+
+
+
+
+<small>''अर्जुन सिंह जाडेजा लिखित''</small>
