--- a/मकाजी_मेघपर.mw
+++ b/मकाजी_मेघपर.mw
@@ -1,5 +1,6 @@
 '''मकाजी मेघपर'''<ref name = Census2011>[http://www.census2011.co.in]</ref><ref name = हरिलाल उपाध्याय>{{cite web|url=http://www.harilalupadhyay.org|title=Online Tribute To The Great Gujarati Author - Late Shri Harilal Upadhyay|first=Jiten|last=Upadhyay|work=harilalupadhyay.org}}</ref> एकस्य सोरठाली ग्राम<ref>{{cite web|title=Gram Panchayat Identification Codes|url=http://saaksharbharat.nic.in/saaksharbharat/forms/gp_code.pdf|website=Saakshar Bharat Mission|accessdate=5 July 2016|page=120|format=PDF}}</ref> अस्तु।
 
+[[पटिमा:MMp in Falak.jpg|thumb|फलक लिपीमा मकाजी मेघपर]] 
 [[पटिमा:MMeghpar FLAG.jpg|thumb|मकाजी मेघपरस्य ध्वजः]]
 
 ==अभिञ्ञाणा==
