--- a/नवानगर_राज्य.mw
+++ b/नवानगर_राज्य.mw
@@ -1,3 +1,3 @@
+'''नवानगर''' भारतस्स एको देशी राज्य होन्त।
 
-
-[[पटिमा:Ranjitsinh.jpeg|thumb|જામ રણજી, વિખ્યાત ક્રિકેટર અને નવાનગર રાજ્યના મહારાજા]]
+[[पटिमा:Ranjitsinh.jpeg|thumb|जाम रणजी]]
