*Empty MediaWiki Message*

--- a/तुर्किये.mw
+++ b/तुर्किये.mw
@@ -1,1 +1,37 @@
 {{PAGENAME}} एकस्य राष्ट्र अस्तु।
+=== संबद्घाः विषया: ===
+
+== चित्रशाला ==
+<gallery>
+| Mustafa Kemal Atatürk
+File:Aya sofya.jpg| 
+File:Kocatepe Mosque Ankara.jpg| 
+File:State Painting and Sculpture Museum of Ankara.jpg| 
+File:DolmabahceMainGate.JPG| 
+File:İzmir clock tower.jpg| 
+File:Pamukkale00.JPG| 
+File:Eskişehir-Aycan.jpg| 
+File:Antalya falezler.jpg| 
+File:Alanya.jpg| 
+File:Bluemosquefront.jpg| 
+File:Diyarbakir P1050751 20080427135832.JPG| 
+File:LocationTurkey2.png|
+</gallery>
+
+== External links ==
+* [http://web.archive.org/web/20000621004553/http://www.mfa.gov.tr/Default.htm All About Turkey] - Turkish Ministry of Foreign Affairs
+* [http://www.cankaya.gov.tr Çankaya] - Official presidential site (in Turkish)
+* [http://www.tbmm.gov.tr TBMM] - Official parliamentary site (in Turkish)
+* [http://HavenWorks.com/world/turkey Turkey News]
+* [http://saglik.hukuku.net Health Law] - Health care law (in Turkish)
+* [http://www.hukukara.com Law Search engine] - Law Search engine(in Turkish)
+* [http://users.swing.be/kusadasi] Kusadasi
+* [http://www.turkishembassy.org Turkish Embassy in Washington D.C.] Turkish Embassy in Washington D.C.
+* [http://www.avtr.info Legal System Info] - Legal System Info (in Turkish)
+* [http://www.hukuku.net Legal Practices Info] - Legal Practices Info(in Turkish)
+* [http://www.hukukline.com Comparative Laws] - Comparative Laws (in Turkish)
+* [http://maps.turkeyodyssey.com Maps of Turkey]
+{{एशियाखण्डस्य देशाः}}
+
+[[वर्गः:एशियाखण्डस्य राष्ट्राणि]]
+[[वर्गः:विभिन्नदेशसम्बद्धाः स्टब्स्]]
