*Empty MediaWiki Message*

--- a/ओटोल्यारिंजियोलोजी.mw
+++ b/ओटोल्यारिंजियोलोजी.mw
@@ -1,3 +1,4 @@
+[[पटिमा:Mani_Zadeh_MD_Endoscopic_Sinus_Surgery.jpg|right|thumb|372x372px|<center>{{PAGENAME}}</center>]]
 
 == अभिञ्ञाणा ==
 <references />
