*Empty MediaWiki Message*

--- a/अंग_प्रत्यारोपण.mw
+++ b/अंग_प्रत्यारोपण.mw
@@ -1,3 +1,5 @@
+[[पटिमा:Podolay_transplantacia_srdca_1968.jpg|right|thumb|282x282px|<center>{{PAGENAME}} (1968)</center>]]
+
 == अभिञ्ञाणा ==
 <references />
 
